# Proyecto1-ED

./: Aleatorio.cpp  Aleatorio.h  CMakeLists.txt  Inicio.cpp  Inicio.h  Jugar.cpp  Jugar.h  Movimiento.cpp  Movimiento.h  Partida.cpp  Partida.h  Preferencias.cpp  Preferencias.h  TablaPosiciones.cpp  TablaPosiciones.h  Verificador.cpp  Verificador.h  lista_ortogonal.cpp  lista_ortogonal.h  main.cpp
