cmake_minimum_required(VERSION 3.21)
project(Proyecto1ED)

set(CMAKE_CXX_STANDARD 14)

add_executable(Proyecto1ED main.cpp lista_ortogonal.cpp lista_ortogonal.h Aleatorio.cpp Aleatorio.h Inicio.cpp Inicio.h Jugar.cpp Jugar.h Partida.cpp Partida.h Preferencias.cpp Preferencias.h Verificador.cpp Verificador.h Movimiento.cpp Movimiento.h TablaPosiciones.cpp TablaPosiciones.h)
